# building-an-automated-machine-learning-pipeline

./: README.md  pyproject.toml
notebooks/: WineRatingPredictor-1.ipynb  WineRatingPredictor-2.ipynb
transformed/: X_train.csv  X_valid.csv  test_features.csv
