[tool.poetry]
name = "building-an-automated-machine-learning-pipeline"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
category-encoders = "^2.6.3"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
